Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -183,16 +183,11 @@ const sections = [
     videos: [
       { id: "XlxzbmAVS2s", title: "[SUB] EP.57-2 Hearts2Hearts | 나 안.긁.혔.어.(🙀) 귀가 흔들리지만 제 의지가 아닙니다 | 돌박이일 하츠투하츠 겨울방학 스페셜 투어 2탄 [4K]", date: "2026. 2. 28", duration: "1:00:25"},
       { id: "IDBESJLmezM", title: "[우쥬레코드] IVE 안유진 with 윤하 | Perfect Night, 미안해 미워해 사랑해, 사건의 지평선, BLACKHOLE | WOULD YOU RECORD (SUB)", date: "2026. 2. 27", duration: "32:47"},
-    ]
-  },
-  {
-    heading: "Music",
-    videos: [
-      { id: "ktvTqknDobU", title: "Bohemian Rhapsody (Official Video Remastered)", date: "Feb 1, 2008", duration: "5:59", color: "#880E4F" },
-      { id: "hTWKbfoikeg", title: "Nirvana – Smells Like Teen Spirit (Official Music Video)", date: "Dec 10, 2009", duration: "5:01", color: "#212121" },
-      { id: "1w7OgIMMRc4", title: "Guns N' Roses – Sweet Child O' Mine (Official Music Video)", date: "Oct 23, 2009", duration: "5:56", color: "#BF360C" },
-      { id: "09R8_2nJtjg", title: "PSY – GANGNAM STYLE(강남스타일) M/V", date: "Jul 15, 2012", duration: "4:12", color: "#4A148C" },
-      { id: "y6120QOlsfU", title: "Darude – Sandstorm", date: "Sep 25, 2010", duration: "3:52", color: "#1A237E" },
+      { id: "00reS35dBnA", title: "[ENG] 구운 페타 치즈 파스타 나가신다 두쫀쿠는 길을 비켜라👑 챌린지 욕구 뿜뿜하는 파스타 레시피의 등장 | 안성재거덩요👨‍🍳", date: "2026. 2. 25", duration: "36:13"},
+      { id: "ZNiY1g7OH8Q", title: "[이즈나의 방] 3n만 원짜리 갈비찜🍲 잘 먹겠습니다🥹 한 그릇 = 한입 먹짱즈나의 세뱃돈 FLEX 설 음식 쟁탈전🍊💸 | Ep.2 설 음식 쟁탈전", date: "2026. 2. 18", duration: "25:18"},
+      { id: "YIJrFUeUH84", title: "우리 캠핑 잘할 수 있을까!? l FIM TRIP - EP.2", date: "2026. 2. 25", duration: "28:53"},
+      { id: "9rfbKwKog4E", title: "[ASMR] What’s In DAYEON’s Bag?👜 | 향수, 파우치, 렌즈, 스퀴시 | 다연 Talking ASMR", date: "2026. 2. 24", duration: "26:50"},
+     
     ]
   },
 ];
@@ -244,3 +239,4 @@ sections.forEach(section => {
 });
 </script>
 </html>
+
