from "WEEK" to "week" Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@ const sections = [
     heading: "WEEK 9 (2026)",
     videos: [      
       { id: "Ie8XeanwG6g", title: "(ENG) 가챠 뽑자 난 다 궁금해🩵 민서 동갑 친구 하츠투하츠(Hearts2Hearts) 에이나X이안이랑 데이트했습니다 | 할명수 ep.277", date: "2026. 2. 27", duration: "17:56"},
-      { id: "jqEh_H1V1Rw", title: "IVE 아이브 MV 'BANG BANG' - Behind The Scenes", date: "2026. 2. 22 (WEEK 8)", duration: "33:35"},
+      { id: "jqEh_H1V1Rw", title: "IVE 아이브 MV 'BANG BANG' - Behind The Scenes", date: "2026. 2. 22 (week 8)", duration: "33:35"},
       { id: "NwCl6v5EUJ0", title: "[EN] 삼촌 자신 있어? 나 아이브야ㅣEP.06 아이브 이서ㅣ트루만쇼", date: "2026. 2. 26", duration: "27:25"},
       { id: "czcsP53TVF8", title: '"감자와 원숭이의 만남"ㅣEP.12 하츠투하츠(Hearts2Hearts)ㅣ미미미누의 방구석 분석', date: "2026. 2. 23", duration: "35:13"},
-      { id: "WBQpgCuL3vs", title: "앞으로도 더 열심히 하겠습니다🙇‍♀️ | LE PLAY", date: "2026. 2. 21 (WEEK 8)", duration: "20:04"},
+      { id: "WBQpgCuL3vs", title: "앞으로도 더 열심히 하겠습니다🙇‍♀️ | LE PLAY", date: "2026. 2. 21 (week 8)", duration: "20:04"},
       { id: "Uu8MZDVypT4", title: "정규 2집 [REVIVE+]부터 ㅇㅇㅇ을 졸업ㅎŁ⊂ト!🎓| 우리 졸업했어요 | IVE", date: "2026. 2. 25", duration: "28:12"},
-      { id: "008r2I5duAg", title: "[SUB] 우리 벌써 1주년이야...🥺 하츠투하츠 컴백 기념 비하인드 대방출✨ | 아이돌 인간극장", date: "2026. 2. 21 (WEEK 8)", duration: "26:59"},
-      { id: "ZgkL6m63F-I", title: "IVE 아이브 'COMING SOON' Trailer - Behind The Scenes", date: "2026. 2. 17 (WEEK 8)", duration: "18:31"},
-      { id: "JSSsQ44r928", title: "[KiiiPoiiint] 미니 팬미팅까지 너무 너무 재밌었어✨ | '404 (New Era)' 음악방송 Behind #2", date: "2026. 2. 20 (WEEK 8)", duration: "20:30"},
+      { id: "008r2I5duAg", title: "[SUB] 우리 벌써 1주년이야...🥺 하츠투하츠 컴백 기념 비하인드 대방출✨ | 아이돌 인간극장", date: "2026. 2. 21 (week 8)", duration: "26:59"},
+      { id: "ZgkL6m63F-I", title: "IVE 아이브 'COMING SOON' Trailer - Behind The Scenes", date: "2026. 2. 17 (week 8)", duration: "18:31"},
+      { id: "JSSsQ44r928", title: "[KiiiPoiiint] 미니 팬미팅까지 너무 너무 재밌었어✨ | '404 (New Era)' 음악방송 Behind #2", date: "2026. 2. 20 (week 8)", duration: "20:30"},
       { id: "HMmxI3RNU7k", title: "키키네 가좍 1주년 축하해 ༘⋆ | HAPPY KiiiKiii DAY", date: "2026. 2. 24", duration: "25:25"},
       { id: "YCvS7cRlRpU", title: "[리무진서비스] EP.203 아이브 안유진 | IVE ANYUJIN | REBEL HEART, 사랑하게 될 거야, Perfect, Text Me Merry Christmas", date: "2026. 2. 24", duration: "34:36"},
     ]
@@ -239,6 +239,7 @@ sections.forEach(section => {
 });
 </script>
 </html>
+
 
 
 
